hphp/test/slow/hhbbc/bad-enums.php.expectf
Fatal error: BadEnum1 cannot include A - it is not an enum in %s/bad-enums.php on line 5
